--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@
 /* -------- General ---------------- */
 
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   background-color: var(--primary-background-color);
   color: var(--primary-text-color);
   font-size: 14px;
@@ -154,7 +154,7 @@ button {
 }
 
 .nav-link.active-page::after {
-  content: '';
+  content: "";
 
   position: absolute;
   left: 0;
@@ -208,7 +208,11 @@ button {
   padding: 200px 452px;
 
   background-color: #c4c4c4;
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+  background-image: linear-gradient(
+      to right,
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
     url(../images/hero-bg.jpeg);
   background-repeat: no-repeat;
   background-position: center;
@@ -242,7 +246,8 @@ button {
   letter-spacing: 0.06em;
   border: none;
   box-shadow: transparent;
-  transition: background-color var(--transition-duration) var(--transition-type-basic),
+  transition: background-color var(--transition-duration)
+      var(--transition-type-basic),
     box-shadow var(--transition-duration) var(--transition-type-basic);
 }
 
@@ -311,7 +316,7 @@ button {
 
 .services-banner {
   position: absolute;
-  content: '';
+  content: "";
 
   display: flex;
   align-items: center;
@@ -421,7 +426,8 @@ button {
 
   background-color: var(--icon-bg);
   color: var(--icon-color);
-  transition: background-color var(--transition-duration) var(--transition-type-basic),
+  transition: background-color var(--transition-duration)
+      var(--transition-type-basic),
     color var(--transition-duration) var(--transition-type-basic);
 }
 
@@ -511,7 +517,8 @@ button {
   color: var(--title-text-color);
   border: transparent;
   box-shadow: transparent;
-  transition: background-color var(--transition-duration) var(--transition-type-basic),
+  transition: background-color var(--transition-duration)
+      var(--transition-type-basic),
     color var(--transition-duration) var(--transition-type-basic);
 }
 
@@ -667,7 +674,7 @@ button {
   color: var(--primary-accent-color);
 }
 
-.footer-right {
+.footer-center {
   margin-left: 70px;
 }
 
@@ -706,7 +713,8 @@ button {
 
   background-color: rgba(255, 255, 255, 0.1);
   color: var(--secondary-accent-color);
-  transition: background-color var(--transition-duration) var(--transition-type-basic);
+  transition: background-color var(--transition-duration)
+    var(--transition-type-basic);
 }
 
 .footer-socials-icon {
@@ -716,6 +724,69 @@ button {
 .footer-socials-link:hover,
 .footer-socials-link:focus {
   background-color: var(--primary-accent-color);
+}
+
+.footer-subscribe {
+  margin-left: 93px;
+}
+
+.subscribe-wrap {
+  display: flex;
+}
+
+.input-subcribe {
+  display: inline-block;
+  width: 358px;
+  height: 50px;
+  padding: 15px;
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  box-sizing: border-box;
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+
+  color: rgba(255, 255, 255, 0.6);
+  background-color: inherit;
+}
+
+.input-subcribe::placeholder {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.25;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.03em;
+
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.btn-subscribe {
+  display: flex;
+
+  margin-left: 12px;
+  min-width: 200px;
+  height: 50px;
+  background-color: var(--primary-accent-color);
+  padding: 10px 28px;
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+}
+
+.btn-subscribe > svg {
+  fill: #ffffff;
+  margin-left: 10px;
 }
 
 /* ----------- Modal window ---------- */
@@ -744,9 +815,10 @@ button {
 
   top: 50%;
   left: 50%;
-
   width: 528px;
   min-height: 581px;
+  padding: 40px;
+
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -778,8 +850,151 @@ button {
   background-color: transparent;
 }
 
+.modal-btn:hover .modal-icon-close,
+.modal-btn:focus .modal-icon-close {
+  fill: var(--primary-accent-color);
+}
+
 .is-hidden {
   opacity: 0;
   pointer-events: none;
   visibility: hidden;
+}
+
+.modal-title {
+  margin-bottom: 30px;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  letter-spacing: 0.03em;
+
+  color: var(--title-text-color);
+}
+
+.modal-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  box-sizing: border-box;
+  border-radius: 4px;
+}
+
+.form-field + .form-field {
+  margin-top: 10px;
+}
+
+.modal-label {
+  margin-bottom: 4px;
+  display: block;
+  width: 100%;
+}
+
+.modal-input-wrap {
+  position: relative;
+}
+
+.modal-input {
+  padding: 12px;
+  padding-left: 42px;
+}
+
+.modal-input:hover,
+.modal-input:focus {
+  border-color: var(--primary-accent-color);
+  outline-color: var(--primary-accent-color);
+}
+
+.modal-input:hover + .input-icons,
+.modal-input:focus + .input-icons {
+  fill: var(--primary-accent-color);
+}
+
+.input-icons {
+  position: absolute;
+  left: 15px;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+.form-field textarea {
+  height: 120px;
+  margin-bottom: 20px;
+  padding: 12px 16px;
+}
+
+.modal-policy {
+  margin-bottom: 30px;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-policy span {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 16px;
+  height: 15px;
+  border: 2px solid #212121;
+  margin-right: 8.38px;
+}
+
+.modal-check-icon {
+  fill: transparent;
+}
+
+.modal-checkbox:checked + .modal-policy > span {
+  background-color: var(--primary-accent-color);
+  border: none;
+}
+
+.modal-checkbox:checked + .modal-policy svg {
+  fill: #ffffff;
+}
+
+.policy-link {
+  color: var(--primary-accent-color);
+}
+
+.policy-link:visited {
+  color: var(--primary-accent-color);
+}
+
+.btn-subm-wrap {
+  display: flex;
+  justify-content: center;
+  align-itemc: center;
+}
+
+.modal-btn-subm {
+  text-align: center;
+  padding: 10px 55px;
+
+  min-width: 200px;
+  border-radius: 4px;
+  border-color: transparent;
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+
+  color: var(--secondary-accent-color);
+  background-color: var(--primary-accent-color);
+
+  transition: background-color var(--transition-duration)
+      var(--transition-type-basic),
+    box-shadow var(--transition-duration) var(--transition-type-basic);
+}
+
+.modal-btn-subm:hover,
+.modal-btn-subm:focus {
+  background-сolor: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
