--- a/css/styles.css
+++ b/css/styles.css
@@ -774,7 +774,6 @@ button {
   background-color: var(--primary-accent-color);
   padding: 10px 28px;
   border: none;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 
   font-weight: 700;
@@ -782,6 +781,16 @@ button {
   line-height: 1.87;
   letter-spacing: 0.06em;
   color: #ffffff;
+
+  transition: background-color var(--transition-duration)
+      var(--transition-type-basic),
+    box-shadow var(--transition-duration) var(--transition-type-basic);
+}
+
+.btn-subscribe:hover,
+.btn-subscribe:focus {
+  background-color: #188ce8;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 .btn-subscribe > svg {
