--- a/css/styles.css
+++ b/css/styles.css
@@ -158,7 +158,7 @@ button {
 
   position: absolute;
   left: 0;
-  bottom: -3px;
+  bottom: -1px;
 
   height: 4px;
   width: 100%;
@@ -562,7 +562,7 @@ button {
 
 .project-top-text {
   position: absolute;
-  transform: translateY(100%);
+  transform: translateY(102%);
 
   width: 100%;
   height: 100%;
@@ -727,7 +727,7 @@ button {
 }
 
 .footer-subscribe {
-  margin-left: 93px;
+  margin-left: auto;
 }
 
 .subscribe-wrap {
@@ -953,6 +953,7 @@ button {
   height: 15px;
   border: 2px solid #212121;
   margin-right: 8.38px;
+  border-radius: 2px;
 }
 
 .modal-check-icon {
